; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_Field_Complete.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_Field_Complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32*, i8* }

@matchCount = common dso_local global i32 0, align 4
@qtrue = common dso_local global i32 0, align 4
@completionField = common dso_local global %struct.TYPE_2__* null, align 8
@completionString = common dso_local global i32* null, align 8
@shortestMatch = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"]%s\0A\00", align 1
@qfalse = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @Field_Complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Field_Complete() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @matchCount, align 4
  %4 = icmp eq i32 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @qtrue, align 4
  store i32 %6, i32* %1, align 4
  br label %54

7:                                                ; preds = %0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i8* @strlen(i32* %10)
  %12 = load i32*, i32** @completionString, align 8
  %13 = call i8* @strlen(i32* %12)
  %14 = ptrtoint i8* %11 to i64
  %15 = ptrtoint i8* %13 to i64
  %16 = sub i64 %14, %15
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %2, align 4
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* %2, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load i32, i32* @shortestMatch, align 4
  %25 = load i32, i32* %2, align 4
  %26 = sext i32 %25 to i64
  %27 = sub i64 8, %26
  %28 = trunc i64 %27 to i32
  %29 = call i32 @Q_strncpyz(i32* %23, i32 %24, i32 %28)
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32*, i32** %31, align 8
  %33 = call i8* @strlen(i32* %32)
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 1
  store i8* %33, i8** %35, align 8
  %36 = load i32, i32* @matchCount, align 4
  %37 = icmp eq i32 %36, 1
  br i1 %37, label %38, label %48

38:                                               ; preds = %7
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i32*, i32** %40, align 8
  %42 = call i32 @Q_strcat(i32* %41, i32 8, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %43 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 1
  %45 = load i8*, i8** %44, align 8
  %46 = getelementptr inbounds i8, i8* %45, i32 1
  store i8* %46, i8** %44, align 8
  %47 = load i32, i32* @qtrue, align 4
  store i32 %47, i32* %1, align 4
  br label %54

48:                                               ; preds = %7
  %49 = load %struct.TYPE_2__*, %struct.TYPE_2__** @completionField, align 8
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 0
  %51 = load i32*, i32** %50, align 8
  %52 = call i32 @Com_Printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32* %51)
  %53 = load i32, i32* @qfalse, align 4
  store i32 %53, i32* %1, align 4
  br label %54

54:                                               ; preds = %48, %38, %5
  %55 = load i32, i32* %1, align 4
  ret i32 %55
}

declare dso_local i8* @strlen(i32*) #1

declare dso_local i32 @Q_strncpyz(i32*, i32, i32) #1

declare dso_local i32 @Q_strcat(i32*, i32, i8*) #1

declare dso_local i32 @Com_Printf(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
